# haemolacriaa-yew

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml  index.html  tailwind.config.js
backend/: Cargo.toml  Makefile
backend/src/: main.rs
backend/src/api/: hello.rs
common/: Cargo.toml
frontend/: Cargo.toml  Makefile  Trunk.toml  index.html  tailwind.config.js  update-tailwind
frontend/src/: config.rs  main.rs  mod.rs
frontend/src/app/pages/: donate.rs  home.rs  mod.rs
frontend/src/components/: buttons.rs  foot.rs  lists.rs  mod.rs  nav.rs
frontend/src/components/home/: button.rs
frontend/src/pages/: about.rs  donate.rs  home.rs  mod.rs  privacy.rs
frontend/src/pages/blog/: blog.rs  mod.rs  pagination.rs
frontend/src/types/: images.rs  links.rs  mod.rs  song.rs
frontend/static/: tailwind-gen.css  tailwind.css
src/: config.rs  lib.rs  main.rs
src/app/: mod.rs
src/app/comp/: mod.rs  nav.rs
src/app/pages/: about.rs  donate.rs  home.rs  mod.rs  privacy.rs  support.rs
src/types/: links.rs  mod.rs  nav.rs
