[package]
name = "haemolacriaa"
version = "0.1.0"
edition = "2021"

[dependencies]
const_format = "0.2.32"
gloo = "0.11.0"
yew = { version = "0.21.0", features = ["csr",] } 
yew-router = "0.18.0"
yew_icons = { version = "0.8.0", features = ["SimpleIconsApple", "SimpleIconsSoundcloud", "SimpleIconsYoutube", "SimpleIconsInstagram", "SimpleIconsSpotify",] }
